<resources>
    <string name="app_name">AndroidReviewApp</string>
    <string name="search">Search</string>
    <string name="search_helper">E.g.Half-Life</string>
    <string name="search_hint">Enter game name</string>
    <string name="error">Error! %1$s</string>
    <string name="missing">Missing field entries!</string>
    <string name="passLength">Password must be at least 6 characters long!</string>
    <string name="noMatch">Passwords do not match!</string>
    <string name="enter_username">Enter username</string>
    <string name="ex_email">example@gmail.com</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="ex_password">qwerty123</string>
    <string name="login">Login</string>
    <string name="nur">New user registration</string>
    <string name="reg_user">Register</string>
    <string name="logout">Logout</string>
    <string name="search_amount">%1$s apps found</string>
    <string name="steam_reviews_found_count">%1$s Steam reviews found</string>
    <string name="app_reviews_found_count">%1$s app reviews found</string>
    <string name="settings">Settings</string>
    <string name="recommends">Recommended</string>
    <string name="steam_reviews">Check Steam Reviews</string>
    <string name="app_reviews">Check App Reviews</string>
    <string name="all">All</string>
    <string name="forgot_password">Forgot password</string>
    <string name="send_password">Reset password</string>
    <string name="password_sent">Password sent to email</string>
    <string name="no_review">No review to delete</string>
    <string name="review_deleted">Review deleted</string>
    <string name="review_not_empty">Review cannot be empty</string>
    <string name="review_posted">Review posted</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="no_game_provided">No game provided</string>
    <string name="recommend">Recommend</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="personal_review_helper">Write review here...</string>
    <!-- Preference Titles -->
    <string name="settings_header">Reviews</string>
    <string name="settings_header2">Search</string>
    <!-- Preferences -->
    <string name="language_title">Review language</string>
    <string name="alphabet_sort">Sort alphabetically</string>
    <string name="namelength_sort">Sort by name length</string>
    <string name="onlystartwith_sort">Results start with query</string>
    <string name="sorting_title">Sort reviews by</string>
    <string name="helpful">Helpful</string>
    <string name="recent">Recent</string>


    <!-- Menu  -->
    <string name="menu_reviews">Reviews</string>
    <string name="menu_my_review">My Review</string>
    <string name="menu_logout">Log Out</string>

    <!-- View Titles -->
    <string name="search_view_title">Games Search</string>
    <string name="search_view_title_game">Games Search - \'%1$s\'</string>
    <string name="details_view_title">%1$s Details</string>
    <string name="steam_reviews_recent_title">Recent Steam Reviews</string>
    <string name="app_reviews_title">App Reviews</string>
    <string name="personal_review_title">My App Review</string>
    <string name="login_title">Log in</string>
    <string name="register_title">Register User</string>
    <string name="forgot_password_title">Forgot Password</string>


    <!-- Details Titles -->
    <string name="genres">GENRES</string>
    <string name="languages">LANGUAGES</string>
    <string name="about_this_game">ABOUT THIS GAME</string>
    <string name="system_requirements">SYSTEM REQUIREMENTS</string>
    <string name="release_date">RELEASE DATE</string>
    <string name="publishers">PUBLISHERS</string>
    <string name="developers">DEVELOPERS</string>
    <string name="initial_price">INITIAL PRICE</string>
    <string name="final_price">FINAL PRICE</string>
    <string name="not_recommended">Not recommended: %1$s</string>
    <string name="recommended">Recommended: %1$s</string>
    <string name="isLinuxSupported">isLinuxSupported</string>
    <string name="isMacSupported">isMacSupported</string>
    <string name="isWindowsSupported">isWindowsSupported</string>
    <string name="app_type">APP TYPE</string>
    <string name="metacritic">metacritic</string>

    <!-- OS requirements -->
    <string name="windows_supported">Windows supported</string>
    <string name="windows_not_supported">Windows not supported</string>
    <string name="Mac_supported">MacOS supported</string>
    <string name="mac_no_supported">MacOS not supported</string>
    <string name="linux_supported">Linux supported</string>
    <string name="linux_not_supported">Linux not supported</string>
    <string name="initialprice_unavailable">Initial price not available</string>


</resources>