<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:addStatesFromChildren="false"
        app:allowDividerAbove="false"
        app:title="@string/settings_header2">
        <SwitchPreferenceCompat
            android:id="@+id/toggle_alphabet"
            app:defaultValue="false"
            app:key="alphabet_switch"
            app:title="@string/alphabet_sort" />
        <SwitchPreferenceCompat
            android:id="@+id/toggle_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:defaultValue="false"
            app:key="length_switch"
            app:title="@string/namelength_sort" />
        <SwitchPreferenceCompat
            android:id="@+id/toggle_startswith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:defaultValue="false"
            app:key="starting_switch"
            app:title="@string/onlystartwith_sort" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_header"
        app:allowDividerAbove="false">

        <ListPreference
            app:defaultValue="all"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:defaultValue="all"
            app:entries="@array/sorting_entries"
            app:entryValues="@array/sorting_values"
            app:key="review_sorting"
            app:title="@string/sorting_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>